# CheFu-Academy-SDK

./: BADGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  composer.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  codeql.yml  publish-native-clients.yml  update-packagist.yml
clients/: README.md
clients/csharp/: README.md
clients/csharp/CheFu.Academy/: CheFu.Academy.csproj  CheFuAcademyClient.cs  CheFuAcademyException.cs
clients/curl/: README.md  chefu-academy.sh
clients/go/: README.md  chefu.go  go.mod
clients/java/: README.md  pom.xml
clients/java/src/main/java/com/chefu/academy/: CheFuAcademyClient.java  CheFuAcademyException.java
clients/php/: README.md  composer.json
clients/php/src/: CheFuAcademyClient.php  CheFuAcademyException.php
clients/python/: README.md  pyproject.toml
clients/python/chefu_academy/: __init__.py  cli.py  client.py
clients/ruby/: README.md  chefu_academy.gemspec
clients/ruby/lib/: chefu_academy.rb
clients/ruby/lib/chefu_academy/: client.rb
docs/: multi-language.md  registry-publishing.md
examples/csharp/: Program.cs
examples/curl/: quickstart.sh
examples/go/: quickstart.go
examples/java/: CheFuAcademyQuickstart.java
examples/php/: quickstart.php
examples/python/: chefu_academy_quickstart.py
examples/ruby/: quickstart.rb
openapi/: chefu-academy-api.openapi.yaml
scripts/: postinstall.cjs
src/: auth.ts  client.ts  courses.ts  index.ts  keys.ts  videos.ts
