[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chefu-academy"
version = "0.1.0"
description = "Official Python client for the CheFu Academy API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CheFu Inc" }]
keywords = ["chefu", "academy", "sdk", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/CheFu-code/CheFu-Academy-SDK"
Repository = "https://github.com/CheFu-code/CheFu-Academy-SDK"
